# magnetar

./: Cargo.toml  README.md  flake.nix
src/: cell.rs  grab_circle.rs  magnetar.rs  main.rs  ring.rs
