[package]
name = "magnetar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
color-rs = "0.7.1"
glam = { version = "0.22.0", features = ["mint"] }
map-range = "0.1.1"
mint = "0.5.9"
rustc-hash = "1.1.0"
stardust-xr-molecules = "0.17.0"
tokio = { version = "1.22.0", default-features = false, features = ["rt"] }
tween = { version = "2.0.0", features = ["glam"] }
